// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TemurinDownloadTable component > renders correctly - Without checksum 1`] = `
<div>
  <table
    class="table table-bordered releases-table"
    id="download-table"
    style="border-spacing: 0 10px; border-collapse: separate;"
  >
    <tbody
      class="table-light"
    >
      <tr>
        <td
          class="table-secondary py-4 align-middle w-25"
        >
          <a
            class="link-light"
            href="https://release_link_mock/"
          >
            <span
              class="text-white"
            >
              release_name_mock
            </span>
          </a>
          <span
            class="text-white d-block m-2"
          >
            Temurin 
            <svg
              data-placement="bottom"
              data-toggle="tooltip"
              fill="currentColor"
              height="25"
              stroke="currentColor"
              stroke-width="0"
              style="color: rgb(83, 127, 185);"
              viewBox="0 0 24 24"
              width="25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                This build is JCK certified
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 1 3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
              />
            </svg>
            <a
              href="/aqavit"
            >
              <img
                alt="AQAvit logo"
                class="img-fluid"
                data-placement="bottom"
                data-toggle="tooltip"
                src="/images/aqavit-icon.png"
                title="This build is AQAvit Verified"
                width="25"
              />
            </a>
          </span>
          <span
            class="text-white"
          >
            January 1, 2020
          </span>
        </td>
        <td
          class="align-middle w-20"
        >
          Os_mock
        </td>
        <td
          class="align-middle w-20"
        >
          arch_mock
        </td>
        <td
          class="align-middle"
        >
          <table
            class="table parent mb-0 w-auto"
          >
            <tbody
              class="table-light"
            >
              <tr>
                <td
                  class="align-middle text-center"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td>
                          type_mock - 0 MB
                        </td>
                      </tr>
                      <tr>
                        <td>
                          <span
                            class="fw-light"
                          >
                            <a
                              data-bs-checksum="installer_checksum_mock"
                              data-bs-target="#checksumModal"
                              data-bs-toggle="modal"
                              href=""
                            >
                              <small>
                                Text
                              </small>
                            </a>
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
                <td
                  class="align-middle"
                >
                  <a
                    class="btn btn-primary"
                    href="/download"
                    state="[object Object]"
                    style="width: 6em;"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                      />
                    </svg>
                     
                    installer_extension_mock
                  </a>
                </td>
              </tr>
              <tr>
                <td
                  class="align-middle text-center"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td>
                          type_mock - 0 MB
                        </td>
                      </tr>
                      <tr>
                        <td>
                          <span
                            class="fw-light"
                          >
                            Text
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
                <td
                  class="align-middle"
                >
                  <a
                    class="btn btn-primary"
                    href="/download"
                    state="[object Object]"
                    style="width: 6em;"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                      />
                    </svg>
                     
                    extension_mock
                  </a>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TemurinDownloadTable component > renders correctly - no data 1`] = `
<div>
  <table
    class="table table-bordered releases-table"
    id="download-table"
    style="border-spacing: 0 10px; border-collapse: separate;"
  >
    <tbody
      class="table-light"
    >
      <tr />
    </tbody>
  </table>
</div>
`;

exports[`TemurinDownloadTable component > renders correctly - with source 1`] = `
<div>
  <p
    class="release-notes"
  >
    <a
      href="/temurin/release-notes?version=mock-release-name"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M3 18h12v-2H3v2zM3 6v2h18V6H3zm0 7h18v-2H3v2z"
        />
      </svg>
      Text
    </a>
    <a
      href="/installation/"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48zm61 356l-12.2-39.6c13-5.8 24.9-14 35.3-24.4 10.4-10.4 18.6-22.3 24.4-35.3l39.5 12.1c-7.9 19.3-19.7 37-34.9 52.2-15.1 15.3-32.8 27.1-52.1 35zM195 108l12.2 39.6c-13 5.8-24.9 14-35.3 24.4-10.4 10.4-18.6 22.3-24.4 35.3L108 195.2c7.9-19.3 19.7-37 34.9-52.2 15.1-15.3 32.8-27.1 52.1-35zm61 84c35.3 0 64 28.7 64 64s-28.7 64-64 64-64-28.7-64-64 28.7-64 64-64zm113.1-49.1c15.2 15.2 26.9 32.9 34.9 52.1l-39.5 12.2c-5.9-13-14-24.9-24.4-35.3-10.4-10.4-22.3-18.6-35.3-24.4l12.1-39.5c19.3 7.9 37 19.7 52.2 34.9zM142.9 369.1c-15.2-15.1-27-32.8-34.9-52.1l39.5-12.2c5.9 13 14 24.9 24.4 35.3 10.4 10.4 22.3 18.6 35.3 24.4L195.1 404c-19.3-7.9-37-19.7-52.2-34.9z"
        />
      </svg>
      Text
    </a>
    <a
      href="https://mock-link"
      rel="noreferrer"
      target="_blank"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 256 256"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M213.66,66.34l-40-40A8,8,0,0,0,168,24H88A16,16,0,0,0,72,40V56H56A16,16,0,0,0,40,72V216a16,16,0,0,0,16,16H168a16,16,0,0,0,16-16V200h16a16,16,0,0,0,16-16V72A8,8,0,0,0,213.66,66.34ZM168,216H56V72h76.69L168,107.31v84.53c0,.06,0,.11,0,.16s0,.1,0,.16V216Zm32-32H184V104a8,8,0,0,0-2.34-5.66l-40-40A8,8,0,0,0,136,56H88V40h76.69L200,75.31Zm-56-32a8,8,0,0,1-8,8H88a8,8,0,0,1,0-16h48A8,8,0,0,1,144,152Zm0,32a8,8,0,0,1-8,8H88a8,8,0,0,1,0-16h48A8,8,0,0,1,144,184Z"
        />
      </svg>
      Text
    </a>
  </p>
  <table
    class="table table-bordered releases-table"
    id="download-table"
    style="border-spacing: 0 10px; border-collapse: separate;"
  >
    <tbody
      class="table-light"
    >
      <tr>
        <td
          class="table-secondary py-4 align-middle w-25"
        >
          <a
            class="link-light"
            href="https://release_link_mock/"
          >
            <span
              class="text-white"
            >
              release_name_mock
            </span>
          </a>
          <span
            class="text-white d-block m-2"
          >
            Temurin 
            <svg
              data-placement="bottom"
              data-toggle="tooltip"
              fill="currentColor"
              height="25"
              stroke="currentColor"
              stroke-width="0"
              style="color: rgb(83, 127, 185);"
              viewBox="0 0 24 24"
              width="25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                This build is JCK certified
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 1 3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
              />
            </svg>
            <a
              href="/aqavit"
            >
              <img
                alt="AQAvit logo"
                class="img-fluid"
                data-placement="bottom"
                data-toggle="tooltip"
                src="/images/aqavit-icon.png"
                title="This build is AQAvit Verified"
                width="25"
              />
            </a>
          </span>
          <span
            class="text-white"
          >
            January 1, 2020
          </span>
        </td>
        <td
          class="align-middle w-20"
        >
          Os_mock
        </td>
        <td
          class="align-middle w-20"
        >
          arch_mock
        </td>
        <td
          class="align-middle"
        >
          <table
            class="table parent mb-0 w-auto"
          >
            <tbody
              class="table-light"
            >
              <tr>
                <td
                  class="align-middle text-center"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td>
                          type_mock - 0 MB
                        </td>
                      </tr>
                      <tr>
                        <td>
                          <span
                            class="fw-light"
                          >
                            <a
                              data-bs-checksum="checksum_mock"
                              data-bs-target="#checksumModal"
                              data-bs-toggle="modal"
                              href=""
                            >
                              <small>
                                Text
                              </small>
                            </a>
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
                <td
                  class="align-middle"
                >
                  <a
                    class="btn btn-primary"
                    href="/download"
                    state="[object Object]"
                    style="width: 6em;"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                      />
                    </svg>
                     
                    extension_mock
                  </a>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
      <tr>
        <td
          class="table-secondary py-4 align-middle w-25"
        >
          <a
            class="link-light"
            href="https://release_link_mock/"
          >
            <span
              class="text-white"
            >
              release_name_mock
            </span>
          </a>
          <span
            class="text-white d-block m-2"
          >
            Temurin 
            <svg
              data-placement="bottom"
              data-toggle="tooltip"
              fill="currentColor"
              height="25"
              stroke="currentColor"
              stroke-width="0"
              style="color: rgb(83, 127, 185);"
              viewBox="0 0 24 24"
              width="25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                This build is JCK certified
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 1 3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
              />
            </svg>
            <a
              href="/aqavit"
            >
              <img
                alt="AQAvit logo"
                class="img-fluid"
                data-placement="bottom"
                data-toggle="tooltip"
                src="/images/aqavit-icon.png"
                title="This build is AQAvit Verified"
                width="25"
              />
            </a>
          </span>
          <span
            class="text-white"
          >
            January 1, 2020
          </span>
        </td>
        <td
          class="align-middle w-20"
        >
          Os_mock
        </td>
        <td
          class="align-middle w-20"
        >
          arch_mock
        </td>
        <td
          class="align-middle"
        >
          <table
            class="table parent mb-0 w-auto"
          >
            <tbody
              class="table-light"
            >
              <tr>
                <td
                  class="align-middle text-center"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td>
                          type_mock - 0 MB
                        </td>
                      </tr>
                      <tr>
                        <td>
                          <span
                            class="fw-light"
                          >
                            <a
                              data-bs-checksum="installer_checksum_mock"
                              data-bs-target="#checksumModal"
                              data-bs-toggle="modal"
                              href=""
                            >
                              <small>
                                Text
                              </small>
                            </a>
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
                <td
                  class="align-middle"
                >
                  <a
                    class="btn btn-primary"
                    href="/download"
                    state="[object Object]"
                    style="width: 6em;"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                      />
                    </svg>
                     
                    installer_extension_mock
                  </a>
                </td>
              </tr>
              <tr>
                <td
                  class="align-middle text-center"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td>
                          type_mock - 0 MB
                        </td>
                      </tr>
                      <tr>
                        <td>
                          <span
                            class="fw-light"
                          >
                            <a
                              data-bs-checksum="checksum_mock"
                              data-bs-target="#checksumModal"
                              data-bs-toggle="modal"
                              href=""
                            >
                              <small>
                                Text
                              </small>
                            </a>
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
                <td
                  class="align-middle"
                >
                  <a
                    class="btn btn-primary"
                    href="/download"
                    state="[object Object]"
                    style="width: 6em;"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                      />
                    </svg>
                     
                    extension_mock
                  </a>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TemurinDownloadTable component > renders correctly 1`] = `
<div>
  <table
    class="table table-bordered releases-table"
    id="download-table"
    style="border-spacing: 0 10px; border-collapse: separate;"
  >
    <tbody
      class="table-light"
    >
      <tr>
        <td
          class="table-secondary py-4 align-middle w-25"
        >
          <a
            class="link-light"
            href="https://release_link_mock/"
          >
            <span
              class="text-white"
            >
              release_name_mock
            </span>
          </a>
          <span
            class="text-white d-block m-2"
          >
            Temurin 
            <svg
              data-placement="bottom"
              data-toggle="tooltip"
              fill="currentColor"
              height="25"
              stroke="currentColor"
              stroke-width="0"
              style="color: rgb(83, 127, 185);"
              viewBox="0 0 24 24"
              width="25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                This build is JCK certified
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 1 3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
              />
            </svg>
            <a
              href="/aqavit"
            >
              <img
                alt="AQAvit logo"
                class="img-fluid"
                data-placement="bottom"
                data-toggle="tooltip"
                src="/images/aqavit-icon.png"
                title="This build is AQAvit Verified"
                width="25"
              />
            </a>
          </span>
          <span
            class="text-white"
          >
            January 1, 2020
          </span>
        </td>
        <td
          class="align-middle w-20"
        >
          Os_mock
        </td>
        <td
          class="align-middle w-20"
        >
          arch_mock
        </td>
        <td
          class="align-middle"
        >
          <table
            class="table parent mb-0 w-auto"
          >
            <tbody
              class="table-light"
            >
              <tr>
                <td
                  class="align-middle text-center"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td>
                          type_mock - 0 MB
                        </td>
                      </tr>
                      <tr>
                        <td>
                          <span
                            class="fw-light"
                          >
                            <a
                              data-bs-checksum="checksum_mock"
                              data-bs-target="#checksumModal"
                              data-bs-toggle="modal"
                              href=""
                            >
                              <small>
                                Text
                              </small>
                            </a>
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
                <td
                  class="align-middle"
                >
                  <a
                    class="btn btn-primary"
                    href="/download"
                    state="[object Object]"
                    style="width: 6em;"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                      />
                    </svg>
                     
                    extension_mock
                  </a>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
      <tr>
        <td
          class="table-secondary py-4 align-middle w-25"
        >
          <a
            class="link-light"
            href="https://release_link_mock/"
          >
            <span
              class="text-white"
            >
              release_name_mock
            </span>
          </a>
          <span
            class="text-white d-block m-2"
          >
            Temurin 
            <svg
              data-placement="bottom"
              data-toggle="tooltip"
              fill="currentColor"
              height="25"
              stroke="currentColor"
              stroke-width="0"
              style="color: rgb(83, 127, 185);"
              viewBox="0 0 24 24"
              width="25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                This build is JCK certified
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 1 3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
              />
            </svg>
            <a
              href="/aqavit"
            >
              <img
                alt="AQAvit logo"
                class="img-fluid"
                data-placement="bottom"
                data-toggle="tooltip"
                src="/images/aqavit-icon.png"
                title="This build is AQAvit Verified"
                width="25"
              />
            </a>
          </span>
          <span
            class="text-white"
          >
            January 1, 2020
          </span>
        </td>
        <td
          class="align-middle w-20"
        >
          Os_mock
        </td>
        <td
          class="align-middle w-20"
        >
          arch_mock
        </td>
        <td
          class="align-middle"
        >
          <table
            class="table parent mb-0 w-auto"
          >
            <tbody
              class="table-light"
            >
              <tr>
                <td
                  class="align-middle text-center"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td>
                          type_mock - 0 MB
                        </td>
                      </tr>
                      <tr>
                        <td>
                          <span
                            class="fw-light"
                          >
                            <a
                              data-bs-checksum="installer_checksum_mock"
                              data-bs-target="#checksumModal"
                              data-bs-toggle="modal"
                              href=""
                            >
                              <small>
                                Text
                              </small>
                            </a>
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
                <td
                  class="align-middle"
                >
                  <a
                    class="btn btn-primary"
                    href="/download"
                    state="[object Object]"
                    style="width: 6em;"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                      />
                    </svg>
                     
                    installer_extension_mock
                  </a>
                </td>
              </tr>
              <tr>
                <td
                  class="align-middle text-center"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td>
                          type_mock - 0 MB
                        </td>
                      </tr>
                      <tr>
                        <td>
                          <span
                            class="fw-light"
                          >
                            <a
                              data-bs-checksum="checksum_mock"
                              data-bs-target="#checksumModal"
                              data-bs-toggle="modal"
                              href=""
                            >
                              <small>
                                Text
                              </small>
                            </a>
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
                <td
                  class="align-middle"
                >
                  <a
                    class="btn btn-primary"
                    href="/download"
                    state="[object Object]"
                    style="width: 6em;"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                      />
                    </svg>
                     
                    extension_mock
                  </a>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
